--- a/View/Left.xaml
+++ b/View/Left.xaml
@@ -9,26 +9,24 @@
              d:DesignHeight="500" d:DesignWidth="450">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="600"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="450"/>
         </Grid.ColumnDefinitions>
 
-        <Viewbox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Left">
-            <local1:FlightBoard Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center"/>
+        <Viewbox HorizontalAlignment="Left" Margin="0,50,0,0" Grid.RowSpan="2" >
+            <local1:FlightBoard Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center"/>
         </Viewbox>
-        <Viewbox Grid.Row="0" Grid.Column="1" Height="50" Width="40" HorizontalAlignment="Right">
-            <Button Grid.Row="0" Grid.Column="1" BorderBrush="Black" HorizontalAlignment="Right" Content="Connact" VerticalAlignment="Center" Background="LightBlue" Command="{Binding ConnactCommand}" Margin="10"/>
+        <Viewbox Grid.Row="0" Width="124" HorizontalAlignment="Center" Margin="175,10,151,10">
+            <Button Grid.Row="0" Grid.Column="1" BorderBrush="Black" FontSize="18" Height="52" Width="97" HorizontalAlignment="Right" Content="Connect" VerticalAlignment="Center" Background="LightBlue" Command="{Binding ConnactCommand}" Margin="10"/>
         </Viewbox>
-        <Viewbox Grid.Row="0" Grid.Column="2" Height="50" Width="40" HorizontalAlignment="Right">
-            <Button Grid.Row="0" Grid.Column="2" BorderBrush="Black" HorizontalAlignment="Right" Content="Disonnect" VerticalAlignment="Center" Background="LightBlue" Command="{Binding DisconnectCommand}" Margin="10"/>
+        <Viewbox Grid.Row="0" Width="135" HorizontalAlignment="Right" Margin="0,10,19,10">
+            <Button Grid.Row="0" Grid.Column="1" BorderBrush="Black" Height="50" Width="103" FontSize="18" HorizontalAlignment="Right" Content="Disonnect" VerticalAlignment="Center" Background="LightBlue" Command="{Binding DisconnectCommand}" Margin="10"/>
         </Viewbox>
-        <Viewbox Grid.Row="0" Grid.Column="3" Height="50" Width="40" HorizontalAlignment="Left">
-            <Button Grid.Row="0" Grid.Column="3" BorderBrush="Black" Content="Settings" HorizontalAlignment="Left" Background="LightBlue" Margin="10" Command="{Binding SettingsCommand}"/>
+        <Viewbox Grid.Row="0" Width="149" HorizontalAlignment="Left" Margin="41,10,0,10">
+            <Button Grid.Row="0"  Grid.Column="1" BorderBrush="Black" FontSize="18" Height="43" Width="90" Content="Settings" HorizontalAlignment="Left" Background="LightBlue" Margin="10" Command="{Binding SettingsCommand}"/>
         </Viewbox>
     </Grid>
 </UserControl>
